# HeroBook

./: LICENSE  README.md  TODO.md  Version.txt  Vocab.json  biome.jsonc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
Elixir/simple_book/: .gitignore  mix.exs
Elm/simple_book/: .gitignore  README.md  index.html
Haxe/advanced_book/: Game.hx  Hero.hx  Item.hx  Main.hx  MainScene.hx  Room.hx  Scene.hx  Test.hx  build.hxml  makefile
Haxe/simple_book/: main.hx  makefile
Haxe/simple_book_export_web/: .gitignore  Generator.hx  Main.hx  README.md  makefile
Herobook_1.2/: Version.txt
Herobook_1.2/Template/: main.rb
Herobook_2.0_enCours/: Version.txt
Herobook_2.0_enCours/Projet Test/: main.rb
Herobook_2.0_enCours/Template/: Main.rb  ModeTxt.rb  Serialisator.rb
Javascript/simple_book/: index.html
Pages/: Main.txt
Ruby/advanced_book/: Vocab.json
Ruby/simple_book/: README.md  main.rb
release/app/: package.json
src/: App.tsx  Editor.tsx  main.css  main.tsx  mains.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AssetsManager.tsx  EditableField.tsx  GameViewer.tsx  GameViewerEditor.tsx  GraphViewer.tsx  PageEditor.tsx  PageFolder.tsx  PageList.tsx  PageTitleEdition.tsx  ScriptEditor.tsx  SettingsWindow.tsx  TopBar.tsx  ViewWindow.tsx  ViewWindowBis.tsx
src/main/: menu.ts
src/pages/: AllPages.tsx  AssetsManager.tsx  Editor.tsx  EditorBis.tsx  Main.tsx  (+4 more)
template-examples/: count.txt
(+179 files in other folders)
